--- a/demo-app/Files/index.html
+++ b/demo-app/Files/index.html
@@ -1,22 +1,24 @@
-
 <!DOCTYPE html>
 <html>
 
 <head>
-	<link rel="stylesheet" href="reset.css" />
-	<link rel="stylesheet" href="style.css" />
 	<meta content="text/html; charset=utf-8" http-equiv="Content-Type">
+	<link type="text/css" rel="stylesheet" href="reset.css" />
+	<link type="text/css" rel="stylesheet" href="style.css" />
 	<title>Experiment One</title>
 </head>
 
 <body>
-	<div class="outer_wrapper"  onmousedown="dragMove();">
-		<h1 class="window_header">This is my App!</h1>
-		<h2>I'm going to make it awesome!</h2>
-		<p>The window is draggable and repositionable</p>
+	<div class="outer_wrapper" onmousedown="dragMove();">
+		<div class="window_header">
+			<h2 class="window_header_text">This is my App!</h2>
+			<h3>I'm going to make it awesome!</h3>
+		</div>
+		<p class="body_p">The window is draggable and repositionable</p>
 		<button id="close" onclick="closeWindow();">Close</button>
 		<!-- <button id="run-teamspeak" onclick="runTeamSpeak();">Run TeamSpeak</button> -->
-		<button onclick="takeScreenshot();">Take Screenshot</button>
+		<button onclick="logStuff();">Log Stuff</button>
+		<button onclick="getLanguage();">language</button>
 		<!-- <button id="open-subwindow" onclick="openSubWindow();">Open Sub-Window</button> -->
 		<!-- <img id="screenshot" width="300px"></img> -->
 	</div>
