--- a/demo-app/Files/subwindow.html
+++ b/demo-app/Files/subwindow.html
@@ -1,33 +1,19 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
-	<head> 
-		<link rel="stylesheet" href="style.css" />
-		<meta content="text/html; charset=utf-8" http-equiv="Content-Type">
-		<title>Sub window</title>
-		<script>
-			function dragMove(){
-				overwolf.windows.getCurrentWindow(function(result){
-					if (result.status=="success"){
-						overwolf.windows.dragMove(result.window.id);
-					}
-				});
-			};
-			
-			function closeWindow(){
-				overwolf.windows.getCurrentWindow(function(result){
-					if (result.status=="success"){
-						overwolf.windows.close(result.window.id);
-					}
-				});
-			};
-		</script>
-	</head>
+<head>
+	<meta content="text/html; charset=utf-8" http-equiv="Content-Type">
+	<link type="text/css" rel="stylesheet" href="reset.css" />
+	<link type="text/css" rel="stylesheet" href="style.css" />
+	<title>Experiment One (Second Window)</title>
+</head>
 
-	<body>
-		<div id="content" onmousedown="dragMove();">
-			<h1>Hello again!</h1>
-			<p>This is the sub window. You can drag from anywhere you want, but you can't resize it.</p>
-			<button id="close" onclick="closeWindow();">Close</button>
-		</div>
-	</body>
+<body>
+	<div id="content" onmousedown="dragMove();">
+		<h1>Second Window</h1>
+		<p>This is not resizable, but still draggable</p>
+		<button id="close" onclick="closeWindow();">Close</button>
+	</div>
+	<script type="text/javascript" src="./script.js"></script>
+</body>
+
 </html>
