implementing an http request service, it will hit a separate server which stores the api keys the server will then, request data fro the apis

--- a/demo-app/Files/index.html
+++ b/demo-app/Files/index.html
@@ -23,11 +23,13 @@
 			<!-- <button id="run-teamspeak" onclick="runTeamSpeak();">Run TeamSpeak</button> -->
 			<button class="buttons" onclick="logStuff();">Log Stuff</button>
 			<button class="buttons" onclick="getLanguage();">language</button>
+			<button class="buttons" onclick="getSomeStuff();">http request</button>
 			<!-- <button id="open-subwindow" onclick="openSubWindow();">Open Sub-Window</button> -->
 		</div>
 		<!-- <img id="screenshot" width="300px"></img> -->
 	</div>
 </body>
+<script type="text/javascript" src="./_services.js"></script>
 <script src="./script.js"></script>
-
+<!-- https://na.api.pvp.net/api/lol/na/v1.4/summoner/by-name/RiotSchmick?api_key=<key> -->
 </html>
